SWD-6 Generate OpenAPI for FE, BE, MB
