# openapi/main.yml
@@ -15,6 +15,26 @@ components:
   schemas:
     RefreshTokenDto:
       $ref: "model/refresh-token.yml#/RefreshTokenDto"
+    TransactionDto:
+      $ref: "model/transaction.yml#/TransactionDto"
+    OrderDetailDto:
+      $ref: "model/order-detail.yml#/OrderDetailDto"
+    PackageDto:
+      $ref: "model/package.yml#/PackageDto"
+    NotificationDto:
+      $ref: "model/notification.yml#/NotificationDto"
+    BlindBoxDto:
+      $ref: "model/blindbox.yml#/BlindBoxDto"
+    PromotionCampaignDto:
+      $ref: "model/promotion-campaign.yml#/PromotionalCampaignDto"
+    VideoDto:
+      $ref: "model/video.yml#/VideoDto"
+    CategoryDto:
+      $ref: "model/category.yml#/CategoryDto"
+    ImageDto:
+      $ref: "model/image.yml#/ImageDto"
+    OrderDto:
+      $ref: "model/order.yml#/OrderDto"
 
 paths:
   /auth/me:
@@ -37,3 +57,43 @@ paths:
     $ref: "path/account.yml"
   /accounts/{accountId}:
     $ref: "path/account-accountId.yml"
+  /blind-boxes:
+    $ref: "path/blindbox.yml"
+  /blind-boxes/{blindBoxId}:
+    $ref: "path/blindbox-blindboxId.yml"
+  /categories:
+    $ref: "path/category.yml"
+  /categories/{categoryId}:
+    $ref: "path/category-categoryId.yml"
+  /orders:
+    $ref: "path/order.yml"
+  /orders/{orderId}:
+    $ref: "path/order-orderId.yml"
+  /transactions:
+    $ref: "path/transaction.yml"
+  /transactions/{transactionId}:
+    $ref: "path/transaction-transactionId.yml"
+  /packages:
+    $ref: "path/package.yml"
+  /packages/{packageId}:
+    $ref: "path/package-packageId.yml"
+  /videos:
+    $ref: "path/video.yml"
+  /videos/{videoId}:
+    $ref: "path/video-videoId.yml"
+  /images:
+    $ref: "path/image.yml"
+  /images/{imageId}:
+    $ref: "path/image-imageId.yml"
+  /notifications:
+    $ref: "path/notification.yml"
+  /notifications/{notificationId}:
+    $ref: "path/notification-notificationId.yml"
+  /order-details:
+    $ref: "path/order-detail.yml"
+  /order-details/{orderDetailId}:
+    $ref: "path/order-detail-orderDetailId.yml"
+  /promotion-campaigns:
+    $ref: "path/promotion-campaign.yml"
+  /promotion-campaigns/{campaignId}:
+    $ref: "path/promotion-campaign-campaignId.yml"
